[metadata]
name = django-camomilla-cms
description = Django powered cms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lotrekagency/camomilla
license = MIT
author = Lotrèk
author_email = dimmitutto@lotrek.it
keywords = cms, django, api cms
classifiers =
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 3
[options]
packages = find:
include_package_data = True
python_requires = >= 3.0.*
install_requires =
    django-hvad @ git+https://git@github.com/lotrekagency/django-hvad.git@master#egg=django-hvad
    djsuperadmin @ git+https://git@github.com/lotrekagency/djsuperadmin.git@master#egg=djsuperadmin
    djangorestframework==3.10.0
    djlotrek @ git+https://git@github.com/lotrekagency/djlotrek.git@master#egg=djlotrek
    Pillow==6.2.0
    sqlparse==0.3.0
    django-ckeditor==5.7.1
[bdist_wheel]
universal=true
[semantic_release]
version_variable = setup.py:__version__