[metadata]
name = django-camomilla-cms
description = Django powered cms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lotrekagency/camomilla
license = MIT
author = Lotrèk
author_email = dimmitutto@lotrek.it
keywords = cms, django, api cms
classifiers =
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 3
[options]
packages = find:
include_package_data = True
python_requires = >= 3.0.*
install_requires =
    lotrek-django-hvad<1.9
    djsuperadmin<1.0.0
    djangorestframework<4.0.0
    djlotrek<1.0.0
    Pillow<7.0.0
    django-ckeditor<6.0.0
    python-magic<0.5
[bdist_wheel]
universal=true
[semantic_release]
version_variable = camomilla/__init__.py:__version__