[metadata]
name = django-camomilla-cms
description = Django powered cms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lotrekagency/camomilla
license = MIT
author = Lotrèk
author_email = dimmitutto@lotrek.it
keywords = cms, django, api cms
classifiers =
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 3
[options]
packages = find:
include_package_data = True
python_requires = >= 3.6
install_requires =
    django-modeltranslation~=0.18.11
    djsuperadmin>=0.9,<1.0.0
    djangorestframework>=3.10.0,<4.0.0
    django-admin-interface>=0.26.0,<1.0.0
    Pillow>=6.2.0,<10.0.0
    django-ckeditor>=5.7.1,<7.0.0
    python-magic>=0.4,<0.5
    jsonmodels==2.6.0
    django-jsonform~=2.19.0
    Django>=3.2
[bdist_wheel]
universal=true
[semantic_release]
version_variable = setup.py:__version__,camomilla/__init__.py:__version__,camomilla/theme/__init__.py:__version__
branch = next